--- a/week1HomeworkLab/stylesheet.css
+++ b/week1HomeworkLab/stylesheet.css
@@ -1,26 +1,15 @@
+body {
+	 background-image: url(http://lorempixel.com/1300/1300/);
+}
+
 .selectedX {
 	background-color: #FFCCFF;
 }
 
 .selectedO {
-	background-color: #FFFFCC
+	background-color: #FFFFCC;
 }
 
-.col-md-4 {
-	border-color: black;
-	border-width: 10px;
-	padding: 10px;
-}
-.container-fluid > row > col-md-4 {
-	border-color: black;
-	border-width: 10px;
-	margin: 10px;
-}
-.container-fluid {
-	margin: 10px;
-	padding:10px;
-	vertical-align: center;
-}
 h3 {
 	font-family: avenir;
 	text-align: center;
@@ -33,11 +22,14 @@ h1 {
 }
 
 html, body {
-	background: ;
+	margin: ;
 }
 
-div.col-md-4 {
-	border: 2px solid white;
+div.breaker {
+	height: 20px;
+}
+div.col-xs-4 {
+	border: 5px solid white;
 	height: 100px;
 	width: 100px;
 	text-align: center;
@@ -45,21 +37,26 @@ div.col-md-4 {
 	padding: 10px;
 	font-family: avenir;
 	font-size: 50px;
-	background-color: #99FFCC;
+	background-color: transparent;/*#99FFCC*/
 	color: grey;
 	font-weight: 15px;
-	
+
 }
-div.container-fluid {
-	background-color: pink;
+div.container-grid {
+	width: 307px;
+	position: center;
+	margin: auto;
+	border: 4px solid white
 }
 
 div.row {
-	margin-left: 50px;
+	margin-left: 0px;
 }
 
 .button {
 	font-family: avenir;
+	color: grey;
+	font-weight: 15px;
 }
 
 /*.row{
